--- a/3d_globe/globe.html
+++ b/3d_globe/globe.html
@@ -1,22 +1,30 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" >
+
 <head>
-  <title>DataLoader</title>
+  <meta charset="UTF-8">
+  <title>Picasso</title>
 
 <!-- Dependencies -->
  <script src="https://d3js.org/d3.v5.min.js"></script>
 
  <!-- Range slider code -->
  <script src="https://cdn.rawgit.com/RasmusFonseca/d3RangeSlider/master/d3RangeSlider.js"></script>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
+<link rel="stylesheet" type="text/css" href="css/slider.css">
 <link rel="stylesheet" type="text/css" href="css/map.css">
 <link rel="stylesheet" type="text/css" href="css/bar.css">
-
+<link rel="stylesheet" type="text/css" href="css/switch.css">
  <!-- Range slider style -->
  <link href="https://cdn.rawgit.com/RasmusFonseca/d3RangeSlider/master/d3RangeSlider.css" rel="stylesheet">
   <style>
     body {
       background-color: rgb(0, 26, 34);
       background: url('images/sky.jpg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
       color: white;
     }
     /*
@@ -48,13 +56,13 @@
   top: 5%;
   margin-right: 20px;
   float: right;
-  position: relative;  
+  position: relative;
   width: 0;
   height: 0;
   border-style: solid;
   border-width: 1.75em 0 1.75em 2.5em;
   border-color: transparent transparent transparent #000;
-  opacity: .75; 
+  opacity: .75;
 }
 
 
@@ -89,55 +97,55 @@ hr {
 }
 
 
-div.tooltip {	
+div.tooltip {
+    opacity: 0;
     margin: 0 0 auto;
     background-color: black;
     color: white;
-    position: absolute;			
-    text-align: center;	
-    max-width: 500px;							
-    padding: 2px;				
-    font: 12px sans-serif;		
-    border: 0px;		
-    border-radius: 8px;			
-    pointer-events: none;			
+    position: absolute;
+    text-align: center;
+    max-width: 500px;
+    padding: 2px;
+    font: 12px sans-serif;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
 }
 
 div.tooltip_colors{
-    position: absolute;			
-    text-align: center;			
-    width: 180px;					
-    height: 28px;					
-    padding: 2px;				
-    font: 12px sans-serif;		
-    background: lightsteelblue;	
-    border: 0px;		
-    border-radius: 8px;			
-    pointer-events: none;	
+    position: absolute;
+    text-align: center;
+    width: 180px;
+    height: 28px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
 }
 
 div.tooltip_colors_click{
-    position: absolute;			
-    text-align: center;			
-    width: 180px;					
-    height: 28px;					
-    padding: 2px;				
-    font: 12px sans-serif;		
-    background: steelblue;	
-    border: 0px;		
-    border-radius: 8px;			
-    pointer-events: none;	
+    position: absolute;
+    text-align: center;
+    width: 180px;
+    height: 28px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: steelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
 }
 
 div.window {
   position: absolute;
   background-color: black;
   color: white;
-  text-align: center;							
-  padding: 2px;				
-  border: 1;		
-  border-radius: 8px;			
-  pointer-events: none;	
+  text-align: center;
+  padding: 2px;
+  border: 1;
+  border-radius: 8px;
   max-height: 1100px;
   max-width: 370px;
   min-width: 200px;
@@ -169,11 +177,11 @@ div.downresize {
 div.windowgrab{
   float: left;
   background-color: green;
-    color: white;		
-    text-align: center;							
-    padding: 2px;				
-    border: 1;		
-    border-radius: 8px;			
+    color: white;
+    text-align: center;
+    padding: 2px;
+    border: 1;
+    border-radius: 8px;
     height: 10px;
     width: 10px;
     cursor: pointer;
@@ -181,12 +189,12 @@ div.windowgrab{
 
 div.x{
    background-color: yellow;
-    color: white;		
-    text-align: center;							
-    padding: 2px;				
-    border: 1;		
-    border-radius: 8px;			
-    pointer-events: none;	
+    color: white;
+    text-align: center;
+    padding: 2px;
+    border: 1;
+    border-radius: 8px;
+    pointer-events: none;
     height: 10px;
     width: 10px;
     float: right;
@@ -197,9 +205,9 @@ div.statistics{
   margin-top: 20px;
   border-radius: 10px;
    background-color: #A9A9A9;
-    color: black;	
-    text-align: center;							
-    padding: 2px;				
+    color: black;
+    text-align: center;
+    padding: 2px;
     max-height: 1100px;
     max-width: 800px;
 }
@@ -227,6 +235,7 @@ div.stars {
 }
 
 #slider-container {
+           display: none;
            position: relative;
            height:30px;
            width:1020px;
@@ -255,16 +264,19 @@ img{
 #globe{
   float: left;
   text-align:center;
+  padding-top: 50px;
 }
 #statsleft{
-  height: 750px;
+  height: 500px;
     width: 20%;
     float: left;
 }
 #statsright{
-  margin: 0 30 auto;
-  height: 750px;
-    width: 20%;
+  margin: 50 30 auto;
+  padding-left: 150px;
+  padding-top: 300px;
+  height: auto;
+    width: 16%;
     float: left;
 }
 .widget{
@@ -281,6 +293,15 @@ img{
   width: 10%;
   float: right;
 }
+ .topcorner{
+   position:absolute;
+   top:10%;
+   right:5%;
+  }
+
+.legend {
+  padding-top: -5em;
+}
 
 }
 </style>
@@ -288,25 +309,18 @@ img{
 
 <body>
 
-
-<button id = "style">Style</button>
-<button id = "school">School</button>
-<button id = "media">Media</button>
 <!--
 <button id = "migrationon">Show Migration Flow</button>
 <button id = "migrationoff">Hide Migration Flow</button>-->
 <!--<button id = "twomap">Switch to 2D world map</button>
 <button id = "threemap">Switch to globe</button>-->
 
- <hr />
-
-  
   <div id="map_controls">
      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="0" height="0"
           style="position:absolute">
 
           <symbol id="map-play" viewBox="-40 -40 1300 1300">
-          <path d="M 600,1200 C 268.65,1200 0,931.35 0,600 0,268.65 268.65,0 600,0 c 331.35,0 600,268.65 600,600 0,331.35 -268.65,600 -600,600 z M 450,300.45 450,899.55 900,600 450,300.45 z"/>          
+          <path d="M 600,1200 C 268.65,1200 0,931.35 0,600 0,268.65 268.65,0 600,0 c 331.35,0 600,268.65 600,600 0,331.35 -268.65,600 -600,600 z M 450,300.45 450,899.55 900,600 450,300.45 z"/>
           </symbol>
 
           <symbol id="map-pause" viewBox="-40 -40 1300 1300">
@@ -335,13 +349,13 @@ M480.1,523.1h87.5c-2.5,54-21,103.8-50.8,145h-64.8C468.6,625.7,478.7,576.2,480.1,
 c-1.6-59.6-14.1-114.7-34.3-160.2h59.3c36.6,43.9,59.6,99.4,62.5,160.2H480.1z M99.3,694.1h54.9c13.4,27.4,29.9,51,48.3,69.4
 C162.8,748.5,127.6,724.5,99.3,694.1z M392.4,763.5c18.6-18.4,34.9-41.9,48.3-69.4h54.9C467.3,724.5,432.1,748.5,392.4,763.5z"/>
              </symbol>
-            
+
             <symbol id="migration-flow" viewBox="0 0 20 20">
-              <path d="M17.218,2.268L2.477,8.388C2.13,8.535,2.164,9.05,2.542,9.134L9.33,10.67l1.535,6.787c0.083,0.377,0.602,0.415,0.745,0.065l6.123-14.74C17.866,2.46,17.539,2.134,17.218,2.268 M3.92,8.641l11.772-4.89L9.535,9.909L3.92,8.641z M11.358,16.078l-1.268-5.613l6.157-6.157L11.358,16.078z"></path>              
+              <path d="M17.218,2.268L2.477,8.388C2.13,8.535,2.164,9.05,2.542,9.134L9.33,10.67l1.535,6.787c0.083,0.377,0.602,0.415,0.745,0.065l6.123-14.74C17.866,2.46,17.539,2.134,17.218,2.268 M3.92,8.641l11.772-4.89L9.535,9.909L3.92,8.641z M11.358,16.078l-1.268-5.613l6.157-6.157L11.358,16.078z"></path>
             </symbol>
 
             <symbol id="no-migration-flow" viewBox= "0 0 20 20">
-              <path d="M17.218,2.268L2.477,8.388C2.13,8.535,2.164,9.05,2.542,9.134L9.33,10.67l1.535,6.787c0.083,0.377,0.602,0.415,0.745,0.065l6.123-14.74C17.866,2.46,17.539,2.134,17.218,2.268 M3.92,8.641l11.772-4.89L9.535,9.909L3.92,8.641z M11.358,16.078l-1.268-5.613l6.157-6.157L11.358,16.078z"></path> 
+              <path d="M17.218,2.268L2.477,8.388C2.13,8.535,2.164,9.05,2.542,9.134L9.33,10.67l1.535,6.787c0.083,0.377,0.602,0.415,0.745,0.065l6.123-14.74C17.866,2.46,17.539,2.134,17.218,2.268 M3.92,8.641l11.772-4.89L9.535,9.909L3.92,8.641z M11.358,16.078l-1.268-5.613l6.157-6.157L11.358,16.078z"></path>
              <path d="M11.469,10l7.08-7.08c0.406-0.406,0.406-1.064,0-1.469c-0.406-0.406-1.063-0.406-1.469,0L10,8.53l-7.081-7.08
               c-0.406-0.406-1.064-0.406-1.469,0c-0.406,0.406-0.406,1.063,0,1.469L8.531,10L1.45,17.081c-0.406,0.406-0.406,1.064,0,1.469
               c0.203,0.203,0.469,0.304,0.735,0.304c0.266,0,0.531-0.101,0.735-0.304L10,11.469l7.08,7.081c0.203,0.203,0.469,0.304,0.735,0.304
@@ -412,13 +426,13 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
              </li>
 
 
-             <li id="migrationflow">              
+             <li id="migrationflow">
               <svg class="map_control_button">
                 <use xlink:href="#migration-flow"></use>
-              </svg>    
+              </svg>
               <svg class="map_control_button">
                <use xlink:href="#no-migration-flow"></use>
-             </svg>          
+             </svg>
               <div class="map_control_button_label">Toggle Migration Flow</div>
             </li>
 
@@ -450,31 +464,98 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
 
      </ul>
  </div>
-  
+
 
   <div class="row align-items-center">
-      
+
       <div id="slider-plot-container"></div>
       <div id="slider-container"></div>
 
-        <div class="col-sm-2">
+      <div class="wrapper">
+      <div class="container">
+
+        <div class="slider-wrapper">
+          <div id="slider-range"></div>
+
+          <div class="range-wrapper">
+            <div class="range"></div>
+
+            <div class="gear-wrapper">
+              <div class="gear-large gear-one">
+                <div class="gear-tooth"></div>
+                <div class="gear-tooth"></div>
+                <div class="gear-tooth"></div>
+                <div class="gear-tooth"></div>
+              </div>
+              <div class="gear-large gear-two">
+                <div class="gear-tooth"></div>
+                <div class="gear-tooth"></div>
+                <div class="gear-tooth"></div>
+                <div class="gear-tooth"></div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="marker marker-0">0</div>
+          <div class="marker marker-25">500</div>
+          <div class="marker marker-50">1000</div>
+          <div class="marker marker-75">1500</div>
+          <div class="marker marker-100">2020</div>
+        </div>
+
+      </div>
+      </div>
+        <!-- <div class="col-sm-2">
           <h2>Date</h2>
           <div id="range-label">0 - 10</div>
         </div>
-      </div>
+      </div> -->
+
   </div>
+
+  <div class="option-group topcorner">
+  <div class="option-container">
+
+    <input class="option-input" checked id="option-1" type="radio" name="options" onclick="changeStyle(this)"/>
+    <input class="option-input" id="option-2" type="radio" name="options" onclick="changeStyle(this)"/>
+
+    <label class="option" for="option-1">
+      <span class="option__indicator"></span>
+      <span class="option__label">
+        Style
+      </span>
+    </label>
+
+    <label class="option" for="option-2">
+      <span class="option__indicator"></span>
+      <span class="option__label2">
+        Media
+      </span>
+    </label>
+
+  </div>
+</div>
 
 
   <div id = "container">
     <div id = "statsleft"> </div>
       <div id= "globe"></div>
     <div id ="statsright"></div>
+
+    <div id = "legend"></div>
+    <input type="checkbox" id="legendCheckbox" checked = false style="float: left; margin-top: 5px;>">
+    <div style="margin-left: 25px;">
+         Show all elements from the legend at once
+    </div>
 </div>
 
-<div id = "legend"></div>
+
 
   <hr />
 <script src='https://d3js.org/d3.v5.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script>
 <script src="https://unpkg.com/d3-simple-slider"></script>
 <script src= 'js/globe_behaviour.js'></script>
 <script src= 'js/buttons.js'></script>
@@ -486,14 +567,11 @@ c0,10.8,1.8,21.2,5.2,30.9h29.5C166.9,626,164.2,615.5,164.2,604.3z"/>
 <script src='js/rotate_world.js'></script>
 <script src="js/main.js"></script>
 <script src="js/chart.js"></script>
-<script src="http://d3js.org/topojson.v0.min.js"></script> 
+<script src="http://d3js.org/topojson.v0.min.js"></script>
 <script src="https://unpkg.com/topojson-client@3"></script>
 
  <!-- Range slider code -->
  <script src="https://cdn.rawgit.com/RasmusFonseca/d3RangeSlider/master/d3RangeSlider.js"></script>
-
-
-  
 
 
 </body>
